# intent-eval-lab

./: .coderabbit.yaml  .editorconfig  .env.sops  .gist-id  .gitignore  .harness-hash  .harness-hash-extra-patterns  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .sops.yaml  .typos.toml  .vale.ini  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN-ISSUES.md  LICENSE  README.md  SAK-DASHBOARD.md  SAK-RECONCILIATION-QUEUE.json  SAK-STATE.json  SAK-WAVE-B-DURABILITY.json  SECURITY.md  SUPPORT.md  TEST_AUDIT.md  lefthook.yml  lychee.toml  pyproject.toml  secrets.example.yaml  sitecustomize.py
.audit-harness/: CHANGELOG.md  NOTICE  PROVENANCE  README.md
.beads/: README.md  issues.jsonl  metadata.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml
.greptile/: config.json  files.json  rules.md
000-docs/: 000-INDEX.md  001-DR-RFC-otel-agent-rollout-gate-signals-draft.md  002-RR-LAND-mcp-testing-bridge.md  003-PP-PLAN-phase-b-scope-refinement.md  004-AT-DECR-isedc-council-record-2026-05-10.md  005-AT-DECR-isedc-v2-terminology-rename-2026-05-10.md  006-AT-DECR-isedc-council-2-phase-b-gate-2026-05-11.md  007-DR-BRIEF-intent-eval-platform-system-brief-2026-05-11.html  008-DR-GAPS-spec-vs-system-brief-2026-05-11.md  009-RR-INTL-otel-sig-genai-temperature.md  010-AT-DECR-isedc-council-session-4-widened-scope-2026-05-13.md  011-AT-ARCH-ecosystem-master-blueprint.md  012-AT-ARCH-platform-runtime-blueprint.md  013-AT-SPEC-repo-blueprint-template.md  014-DR-GLOS-canonical-glossary.md  015-AA-AUDT-appaudit-devops-playbook.md  016-RR-LAND-kernel-shadow-inventory-2026-05-20.md  017-RR-LAND-shape-reconciliation-addendum-2026-05-21.md  018-AT-DECR-isedc-council-session-5-jrig-reconciliation-2026-05-21.md  019-AA-AACR-schema-repoint-iel-link-schemas-2026-05-21.md  020-AA-AACR-harness-hash-rollout-lab-2026-05-22.md  021-AT-DECR-iah-e02-deferred-to-iah-e04-2026-05-23.md  022-AT-DECR-isedc-session-6-beads-reengage-2026-05-23.md  023-AA-AACR-thinker-panel-review-2026-05-25.md  024-AA-AACR-cross-repo-release-sweep-2026-05-26.md  025-PP-PLAN-j-rig-keeper-pretrip-evidence-2026-05-26.md  025-PP-PLAN-skill-refiner-2026-05-26.md  025-PP-PLAN-skillopt-pattern-plugin-ecosystem-2026-05-26.md  026-PP-PLAN-iep-full-stack-thinker-canon-and-engineers-audit-2026-05-26.md  027-PP-PLAN-skill-refiner-snoopy-fluttering-comet-v4-2026-05-26.md  028-AT-DECR-isedc-council-session-7-skill-refiner-plan-ratification-2026-05-27.md  029-DR-BAND-skill-refiner-bandwidth-model-2026-05-27.md  030-AT-DECR-eval-set-bootstrap-decisions-2026-05-28.md  031-PP-PLAN-skill-refiner-sak-amendment-v6-2026-05-28.md  032-AT-DECR-isedc-class-1-charter-spec-authority-kernel-draft-2026-05-28.md  033-PP-PLAN-skill-refiner-sak-amendment-v7-2026-05-28.md  034-AT-DECR-dr028-amendment-phase-a0-provider-choice-2026-05-29.md  035-AT-DECR-isedc-council-session-8-labs-dashboard-2026-05-29.md  036-AT-DECR-phase-a0-result-proceed-2026-05-31.md  037-AT-DECR-skillspector-positioning-integrate-2026-05-31.md  (+77 more)
ci/: assemble-manifest.ts  emit-evidence.ts
docs/: detector-health.md  dr-ledger-anchoring.md
e2e/: README.md  package-lock.json  package.json  run-e2e.mjs
ecosystem/: README.md  coherence-check.sh  ecosystem.json
research/: 000-DR-FIND-iep-phase-b-gap-analysis-and-research-framework-2026-05-20.md  000-RR-BIBL-shared-bibliography-2026-05-20.md  000-RR-COMP-ecosystem-landscape-2026-05-20.md  2605.23904-skillopt-digest.md  README.md  agentskills-spec-v1.0-snapshot.md  agentskills-spec-v1.0.0.md  claude-docs-spec-tree-2026-05-27.md
scripts/: audit-harness  bd-claim-precheck.sh  build-dr-ledger.sh  build-evidence-bundle.py  check-statemachine-drift.py  check-surface-registry.py  check-vendor-meta-integrity.py  classifier-walls.py  completeness-ledger.py  detector-health.py  drift-eval-runner.py  emit-snapshot-currency.py  extract-agent-definition-projection.py  extract-hook-config-projection.py  extract-marketplace-catalog-projection.py  extract-mcp-projection.py  extract-plugin-manifest-projection.py  fetch-capture.py  leading-indicator-watch.py  lineage-log.py  projection-freshness.py  ratified-clause-conflict-check.sh  reconciliation-liveness.py  render-sak-dashboard.py  sak-kernel-gate-revert.py  sak-reconciliation-queue.py  sops-env  (+7 more)
(+525 files in other folders)
